Fix bug with stretching button

--- a/src/styles/components/table.scss
+++ b/src/styles/components/table.scss
@@ -31,9 +31,8 @@ input::-webkit-inner-spin-button {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  height: 100%;
   width: 100%;
-  min-height: 3.1em;
+  height: 3.1em;
   border: 1px solid #ccc;
   background-color: white;
 }
